# Khalyavkin_proga_labs_2_semester

./: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/inc/: TestRunner.h
lab1/inc/Containers/: CircularDoublyLinkedList.h  Node.h
lab1/inc/Tests/: TestBase.h
lab1/inc/Tests/Functional/: DoublyLinkedListFunctionalTests.h  RemovePrimesTest.h  Test2.h  TestAddNode.h
lab1/inc/Tests/Logical/: DoublyLinkedListLogicalTests.h  LogicAppendTest.h  Test1.h
lab1/inc/scripts/: DoublyLinkedList.h
lab1/src/: TestRunner.cpp  main.cpp
lab1/src/Containers/: CircularDoublyLinkedList.cpp
lab1/src/Tests/: TestRunner.cpp
lab1/src/Tests/Functional/: DoublyLinkedListFunctionalTests.cpp  RemovePrimesTest.cpp  SortTest.cpp  Test2.cpp
lab1/src/Tests/Logical/: DoublyLinkedListLogicalTests.cpp  LogicAppendTest.cpp  LogicRemovePrimesTest.cpp  Test1.cpp
lab1/src/scripts/: DoublyLinkedList.cpp
lab2/: CMakeLists.txt
lab2/inc/: TaskExecutor.h
lab2/inc/Scripts/: PathFinder.h  QuickSort.h  ReverseNumber.h  StringLength.h  Utils.h
lab2/inc/Tests/: TestRunner.h
lab2/inc/Tests/Functional/: AppendTest.h  CountEndingWith2Or4Test.h  PathFinderFunctionalTests.h  QuickSortFunctionalTests.h  ReverseNumberFunctionalTests.h  SortTest.h  StringLengthFunctionalTests.h
lab2/inc/Tests/Logical/: LogicRemovePrimesTest.h  LogicSortingTest.h  PathFinderLogicalTests.h  QuickSortLogicalTests.h  ReverseNumberLogicalTests.h  StringLengthLogicalTests.h
lab2/src/: TaskExecutor.cpp  main.cpp
lab2/src/All_CPP/: PathFinder.cpp  ReverseNumber.cpp
lab2/src/Scripts/: PathFinder.cpp  QuickSort.cpp  StringLength.cpp  Utils.cpp
lab2/src/Tests/: TestRunner.cpp
lab2/src/Tests/Functional/: AppendTest.cpp  CountEndingWith2Or4Test.cpp  PathFinderFunctionalTests.cpp  QuickSortFunctionalTests.cpp  ReverseNumberFunctionalTests.cpp  StringLengthFunctionalTests.cpp
lab2/src/Tests/Logical/: LogicSortingTest.cpp  PathFinderLogicalTests.cpp  QuickSortLogicalTests.cpp  ReverseNumberLogicalTests.cpp  StringLengthLogicalTests.cpp
lab3/: CMakeLists.txt
lab3/inc/: TaskExecutor.h
lab3/inc/Scripts/: Cube.h  RectangularParallelepiped.h
lab3/inc/Tests/: TestRunner.h
lab3/inc/Tests/Functional/: CubeFunctionalTests.h  RectangularParallelepipedFunctionalTests.h
lab3/inc/Tests/Logical/: CubeLogicalTests.h  RectangularParallelepipedLogicalTests.h
lab3/src/: TaskExecutor.cpp  main.cpp
lab3/src/CubeCPP/: Cube.cpp
lab3/src/Scripts/: RectangularParallelepiped.cpp
lab3/src/Tests/: TestRunner.cpp
lab3/src/Tests/Functional/: CubeFunctionalTests.cpp  RectangularParallelepipedFunctionalTests.cpp
lab3/src/Tests/Logical/: CubeLogicalTests.cpp  RectangularParallelepipedLogicalTests.cpp
lab4/: CMakeLists.txt
lab4/inc/Scripts/: BigInt.h
lab4/inc/Tests/Functional/: BigIntFunctionalTests.h
lab4/inc/Tests/Logical/: BigIntLogicalTests.h
lab4/src/: main.cpp
lab4/src/Scripts/: BigInt.cpp
lab4/src/Tests/: TestRunner.cpp
lab4/src/Tests/Functional/: BigIntFunctionalTests.cpp
lab4/src/Tests/Logical/: BigIntLogicalTests.cpp
lab5/: CMakeLists.txt
lab5/inc/Scripts/: MyVector.h
lab5/inc/Tests/Functional/: MyVectorFunctionalTests.h
lab5/inc/Tests/Logical/: MyVectorLogicalTests.h
lab5/src/: main.cpp
lab5/src/MyVector/: MyVector.cpp
lab5/src/Tests/: TestRunner.cpp
lab5/src/Tests/Functional/: MyVectorFunctionalTests.cpp
lab5/src/Tests/Logical/: MyVectorLogicalTests.cpp
lab6/: CMakeLists.txt
lab6/inc/: TaskExecutor.h
lab6/inc/Matrix/: Matrix.h
lab6/inc/Tests/: TestMacros.h  TestRunner.h
lab6/inc/Tests/Functional/: MatrixFunctionalTests.h
lab6/inc/Tests/Logical/: MatrixLogicalTests.h
lab6/src/: TaskExecutor.cpp  main.cpp
lab6/src/Matrix/: Matrix.cpp
lab6/src/Tests/Functional/: MatrixFunctionalTests.cpp
lab6/src/Tests/Logical/: MatrixLogicalTests.cpp
lab7/: CMakeLists.txt
lab7/inc/Tests/: TestRunner.h
lab7/inc/Tests/Functional/: VectorBoolFunctionalTests.h
lab7/inc/Tests/Logical/: VectorBoolLogicalTests.h
lab7/inc/VectorBool/: VectorBool.h
lab7/src/: main.cpp
lab7/src/Tests/: TestRunner.cpp
lab7/src/Tests/Functional/: VectorBoolFunctionalTests.cpp
lab7/src/Tests/Logical/: VectorBoolLogicalTests.cpp
lab7/src/VectorBool/: VectorBool.cpp
lab8/: .gitignore  CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt
lab9/inc/: PongGame.h
lab9/src/: PongGame.cpp  main.cpp
